--- a/PTA_Test/期中测试.md
+++ b/PTA_Test/期中测试.md
@@ -1,116 +1,117 @@
-### 判断题
-1-1某二叉树的前序和中序遍历序列正好一样，则该二叉树中的任何结点一定都无右孩子。 (3分)
-- F
-1-2一棵有124个结点的完全二叉树，其叶结点个数是确定的。 (3分)
-T
-1-3若一个栈的输入序列为{1, 2, 3, 4, 5}，则不可能得到{3, 4, 1, 2, 5}这样的出栈序列。 (3分)
-T
-1-4在一棵二叉搜索树上查找63，序列39、101、25、80、70、59、63是一种可能的查找时的结点值比较序列。 (3分)
-F
-1-5如果无向图G必须进行两次广度优先搜索才能访问其所有顶点，则G中一定有回路。 (3分)
-F
-1-6算法分析的两个主要方面是时间复杂度和空间复杂度的分析。 (2分)
-T
-1-7无向连通图边数一定大于顶点个数减1。 (3分)
-F
-1-8将1、2、3、4、5、6顺序插入初始为空的AVL树中，当完成这6个元素的插入后，该AVL树的先序遍历结果是：4、2、1、3、5、6。 (3分)
-T
-1-9将N个数据按照从小到大顺序组织存放在一个单向链表中。如果采用二分查找，那么查找的平均时间复杂度是O(logN)。 (3分)
-F
-1-10所谓“循环队列”是指用单向循环链表或者循环数组表示的队列。 (2分)
-F
-
-### 单选题
-2-1设h为不带头结点的单向链表。在h的头上插入一个新结点t的语句是：(4分) 
-A.	 h=t; t->next=h;
-B.	 h=t; t->next=h->next;
-C.	 t->next=h->next; h=t;
-D.	 t->next=h; h=t;
- 2-2若借助堆栈将中缀表达式a+b*c+(d*e+f)*g转换为后缀表达式，当读入f时，堆栈里的内容是什么（按堆栈自底向上顺序）？ (4分)
-A.	 ++(+
-B.	 +(*+
-C.	 +(+
-D.	 abcde
-作者: DS课程组
-单位: 浙江大学
-2-3
-给定程序时间复杂度的递推公式：T(1)=1，T(N)=2T(N/2)+N。则程序时间复杂度是：(4分)
-A.	 O(N)
-B.	 O(NlogN)
-C.	 O(logN)
-D.	 O(N2)
-作者: DS课程组
-单位: 浙江大学
-2-4
-设一段文本中包含4个对象{a,b,c,d}，其出现次数相应为{4,2,5,1}，则该段文本的哈夫曼编码比采用等长方式的编码节省了多少位数？ (4分)
-A.	 4
-B.	 0
-C.	 2
-D.	 5
-作者: DS课程组
-单位: 浙江大学
-2-5
-三叉树中，度为1的结点有5个，度为2的结点3个，度为3的结点2个，问该树含有几个叶结点？ (4分)
-A.	 10
-B.	 12
-C.	 13
-D.	 8
-作者: DS课程组
-单位: 浙江大学
-2-6
-已知一棵二叉树的先序遍历结果是ABC，则以下哪个序列是不可能的中序遍历结果： (4分)
-A.	 BAC
-B.	 ABC
-C.	 CBA
-D.	 CAB
-作者: DS课程组
-单位: 浙江大学
-2-7
-下列函数中，哪个函数具有最快的增长速度？ (4分)
-A.	 N3
-B.	 N2logN
-C.	 N(logN)4
-D.	 NlogN2
-作者: DS课程组
-单位: 浙江大学
-2-8
-将6、4、3、5、8、9顺序插入初始为空的最大堆（大根堆）中，那么插入完成后堆顶的元素为： (4分)
-A.	 6
-B.	 3
-C.	 5
-D.	 9
-作者: DS课程组
-单位: 浙江大学
-2-9
-若用大小为6的数组来实现循环队列，且当前front和rear的值分别为0和4。当从队列中删除两个元素，再加入两个元素后，front和rear的值分别为多少？ (4分)
-A.	 2和2
-B.	 2和4
-C.	 2和6
-D.	 2和0
-作者: DS课程组
-单位: 浙江大学
-2-10
-给定N×N的二维数组A，则在不改变数组的前提下，查找最大元素的时间复杂度是：(4分)
-A.	 O(N2)
-B.	 O(NlogN)
-C.	 O(N)
-D.	 O(N2logN)
-作者: DS课程组
-单位: 浙江大学
-2-11
-在并查集问题中，已知集合元素0~8所以对应的父结点编号值分别是{ 1, -4, 1, 1, -3, 4, 4, 8, -2 }（注：−n表示树根且对应集合大小为n），那么将元素6和8所在的集合合并（要求必须将小集合并到大集合）后，该集合对应的树根和父结点编号值分别是多少？ (4分)
-A.	 8和-6
-B.	 1和-6
-C.	 4和-5
-D.	 8和-5
-作者: DS课程组
-单位: 浙江大学
-2-12
-在一个用数组表示的完全二叉树中，如果根结点下标为1，那么下标为17和19这两个结点的最近公共祖先结点在哪里（数组下标）？ （注：两个结点的“公共祖先结点”是指同时都是这两个结点祖先的结点） (4分)
-A.	 4
-B.	 1
-C.	 8
-D.	 2
-作者: DS课程组
-单位: 浙江大学
+### 判断题  
+1-1某二叉树的前序和中序遍历序列正好一样，则该二叉树中的任何结点一定都无右孩子。 (3分)  
+- F  
+1-2一棵有124个结点的完全二叉树，其叶结点个数是确定的。 (3分)  
+- T  
+1-3若一个栈的输入序列为{1, 2, 3, 4, 5}，则不可能得到{3, 4, 1, 2, 5}这样的出栈序列。 (3分)  
+- T  
+1-4在一棵二叉搜索树上查找63，序列39、101、25、80、70、59、63是一种可能的查找时的结点值比较序列。 (3分)  
+- F  
+1-5如果无向图G必须进行两次广度优先搜索才能访问其所有顶点，则G中一定有回路。 (3分)  
+- F  
+1-6算法分析的两个主要方面是时间复杂度和空间复杂度的分析。 (2分)  
+- T  
+1-7无向连通图边数一定大于顶点个数减1。 (3分)  
+- F  
+1-8将1、2、3、4、5、6顺序插入初始为空的AVL树中，当完成这6个元素的插入后，该AVL树的先序遍历结果是：4、2、1、3、5、6。 (3分)  
+- T  
+1-9将N个数据按照从小到大顺序组织存放在一个单向链表中。如果采用二分查找，那么查找的平均时间复杂度是O(logN)。 (3分)  
+- F  
+1-10所谓“循环队列”是指用单向循环链表或者循环数组表示的队列。 (2分)  
+- F  
+  
+### 单选题  
+2-1设h为不带头结点的单向链表。在h的头上插入一个新结点t的语句是：(4分)   
+A.	 h=t; t->next=h;  
+B.	 h=t; t->next=h->next;  
+C.	 t->next=h->next; h=t;  
+D.	 t->next=h; h=t;  
+ 2-2若借助堆栈将中缀表达式a+b*c+(d*e+f)*g转换为后缀表达式，当读入f时，堆栈里的内容是什么（按堆栈自底向上顺序）？ (4分)  
+A.	 ++(+  
+B.	 +(*+  
+C.	 +(+  
+D.	 abcde  
+作者: DS课程组  
+单位: 浙江大学  
+2-3  
+给定程序时间复杂度的递推公式：- T(1)=1，- T(N)=2- T(N/2)+N。则程序时间复杂度是：(4分)  
+A.	 O(N)  
+B.	 O(NlogN)  
+C.	 O(logN)  
+D.	 O(N2)  
+作者: DS课程组  
+单位: 浙江大学  
+2-4  
+设一段文本中包含4个对象{a,b,c,d}，其出现次数相应为{4,2,5,1}，则该段文本的哈夫曼编码比采用等长方式的编码节省了多少位数？ (4分)  
+A.	 4  
+B.	 0  
+C.	 2  
+D.	 5  
+作者: DS课程组  
+单位: 浙江大学  
+2-5  
+三叉树中，度为1的结点有5个，度为2的结点3个，度为3的结点2个，问该树含有几个叶结点？ (4分)  
+A.	 10  
+B.	 12  
+C.	 13  
+D.	 8  
+作者: DS课程组  
+单位: 浙江大学  
+2-6  
+已知一棵二叉树的先序遍历结果是ABC，则以下哪个序列是不可能的中序遍历结果： (4分)  
+A.	 BAC  
+B.	 ABC  
+C.	 CBA  
+D.	 CAB  
+作者: DS课程组  
+单位: 浙江大学  
+2-7  
+下列函数中，哪个函数具有最快的增长速度？ (4分)  
+A.	 N3  
+B.	 N2logN  
+C.	 N(logN)4  
+D.	 NlogN2  
+作者: DS课程组  
+单位: 浙江大学  
+2-8  
+将6、4、3、5、8、9顺序插入初始为空的最大堆（大根堆）中，那么插入完成后堆顶的元素为： (4分)  
+A.	 6  
+B.	 3  
+C.	 5  
+D.	 9  
+作者: DS课程组  
+单位: 浙江大学  
+2-9  
+若用大小为6的数组来实现循环队列，且当前front和rear的值分别为0和4。当从队列中删除两个元素，再加入两个元素后，front和rear的值分别为多少？ (4分)  
+A.	 2和2  
+B.	 2和4  
+C.	 2和6  
+D.	 2和0  
+作者: DS课程组  
+单位: 浙江大学  
+2-10  
+给定N×N的二维数组A，则在不改变数组的前提下，查找最大元素的时间复杂度是：(4分)  
+A.	 O(N2)  
+B.	 O(NlogN)  
+C.	 O(N)  
+D.	 O(N2logN)  
+作者: DS课程组  
+单位: 浙江大学  
+2-11  
+在并查集问题中，已知集合元素0~8所以对应的父结点编号值分别是{ 1, -4, 1, 1, -3, 4, 4, 8, -2 }（注：−n表示树根且对应集合大小为n），那么将元素6和8所在的集合合并（要求必须将小集合并到大集合）后，该集合对应的树根和父结点编号值分别是多少？ (4分)  
+A.	 8和-6  
+B.	 1和-6  
+C.	 4和-5  
+D.	 8和-5  
+作者: DS课程组  
+单位: 浙江大学  
+2-12  
+在一个用数组表示的完全二叉树中，如果根结点下标为1，那么下标为17和19这两个结点的最近公共祖先结点在哪里（数组下标）？ （注：两个结点的“公共祖先结点”是指同时都是这两个结点祖先的结点） (4分)  
+A.	 4  
+B.	 1  
+C.	 8  
+D.	 2  
+作者: DS课程组  
+单位: 浙江大学  
+  
 
