--- a/PTA_Test/期中测试.md
+++ b/PTA_Test/期中测试.md
@@ -1,24 +1,24 @@
 ### 判断题  
 1-1某二叉树的前序和中序遍历序列正好一样，则该二叉树中的任何结点一定都无右孩子。 (3分)  
-- F  
+F  
 1-2一棵有124个结点的完全二叉树，其叶结点个数是确定的。 (3分)  
-- T  
+T  
 1-3若一个栈的输入序列为{1, 2, 3, 4, 5}，则不可能得到{3, 4, 1, 2, 5}这样的出栈序列。 (3分)  
-- T  
+T  
 1-4在一棵二叉搜索树上查找63，序列39、101、25、80、70、59、63是一种可能的查找时的结点值比较序列。 (3分)  
-- F  
+F  
 1-5如果无向图G必须进行两次广度优先搜索才能访问其所有顶点，则G中一定有回路。 (3分)  
-- F  
+F  
 1-6算法分析的两个主要方面是时间复杂度和空间复杂度的分析。 (2分)  
-- T  
+T  
 1-7无向连通图边数一定大于顶点个数减1。 (3分)  
-- F  
+F  
 1-8将1、2、3、4、5、6顺序插入初始为空的AVL树中，当完成这6个元素的插入后，该AVL树的先序遍历结果是：4、2、1、3、5、6。 (3分)  
-- T  
+T  
 1-9将N个数据按照从小到大顺序组织存放在一个单向链表中。如果采用二分查找，那么查找的平均时间复杂度是O(logN)。 (3分)  
-- F  
+F  
 1-10所谓“循环队列”是指用单向循环链表或者循环数组表示的队列。 (2分)  
-- F  
+F  
   
 ### 单选题  
 2-1设h为不带头结点的单向链表。在h的头上插入一个新结点t的语句是：(4分)   
@@ -34,7 +34,7 @@ D.	 abcde
 作者: DS课程组  
 单位: 浙江大学  
 2-3  
-给定程序时间复杂度的递推公式：- T(1)=1，- T(N)=2- T(N/2)+N。则程序时间复杂度是：(4分)  
+给定程序时间复杂度的递推公式：T(1)=1，T(N)=2T(N/2)+N。则程序时间复杂度是：(4分)  
 A.	 O(N)  
 B.	 O(NlogN)  
 C.	 O(logN)  
